# message-sender-telegram-bot

./: .dockerignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO  alembic.ini  docker.example.env  example.env  git-commit-message  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
db_migration/: env.py
db_migration/versions/: 00f4eeaccbc2_add_an_is_owner_column_to_the_user_table.py  11424f7eb1a2_change_a_data_type_of_the_user_id_.py  158c8310c382_rename_validtoken_to_token_and_update_.py  39e3c833989e_remove_unused_a_token_column_from_a_.py  6b961863554f_create_a_message_table.py  7b540a7fa884_create_the_authorizeduser_and_.py  7b540a7fa884_create_the_user_and_validtoken_tables.py  bc97e89af787_add_a_last_send_date_column_to_the_user_.py  da78d319324a_drop_a_token_column_in_the_user_table_.py
docs/source/: conf.py  index.rst  reference.rst
docs/source/diagrams/: classDiagram.wsd
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
src/message_sender_telegram_bot/: __init__.py  main.py
src/message_sender_telegram_bot/libs/: __init__.py  database_tables.py  db_item_creator.py  db_item_getter.py  db_message_manipulator.py  db_valid_token_getter.py  db_valid_token_manipulator.py  handlers.py  helpers.py  settings.py
src/message_sender_telegram_bot/libs/authorizations/: __init__.py  authorization.py  token_authorization.py
src/message_sender_telegram_bot/libs/consts/: __init__.py  answers.py  button_texts.py  commands.py  gmail_smtp_server.py
src/message_sender_telegram_bot/libs/cooldown_checkers/: __init__.py  cooldown_checker.py  message_send_cooldown_checker.py
src/message_sender_telegram_bot/libs/db_user_manipulators/: __init__.py  abstract_db_user_manipulator.py  db_user_manipulator.py
src/message_sender_telegram_bot/libs/fstrings/: __init__.py  answers.py
src/message_sender_telegram_bot/libs/interfaces/: __init__.py  abstract_db_user_manipulator.py  authorization.py  cooldown_checker.py  db_item_creator.py  db_item_getter.py  sender.py  (+1 more)
tests/: TODO  conftest.py  test_db_item_creator.py  test_db_item_getter.py  test_db_message_manipulator.py  test_db_valid_token_getter.py  test_db_valid_token_manipulator.py  test_handlers.py  test_helpers.py
tests/authorizations/: test_authorization.py  test_token_authorization.py
tests/cooldown_checker/: test_cooldown_checker.py  test_message_send_cooldown_checker.py
tests/db_user_manipulators/: test_abstract_db_user_manipulator.py  test_db_user_manipulator.py
tests/interfaces/: test_abstract_db_user_manipulator.py  test_authorization.py  test_cooldown_checker.py  test_db_item_creator.py  test_db_item_getter.py  test_sender.py  test_smtp_creator.py
tests/ownership_provers/: test_ownership_prover.py  test_user_ownership_prover.py
tests/rdb/manipulators/: test_db_message_manipulator.py  test_db_user_manipulator.py  test_db_valid_token_manipulator.py
tests/senders/: test_email_sender.py  test_sender.py
tests/smtp_creators/: TODO  test_gmail_smtp_creator.py  test_smtp_creator.py
tests/token_creators/: test_hex_token_creator.py  test_token_creator.py
tests/tokens/: test_hex_token.py  test_token.py
(+25 files in other folders)
