[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "message_sender_telegram_bot"
authors = [{ name = "roli2py", email = "romanmashevskyi@proton.me" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = "~= 3.14.0"
dynamic = ["version", "description"]
dependencies = [
    "python-telegram-bot ~= 22.5",
    "sqlalchemy ~= 2.0.45",
    "mysqlclient ~= 2.2.7",
    "alembic ~= 1.17.2",
]

[project.optional-dependencies]
doc = ["sphinx ~= 9.1.0"]
test = ["pytest ~= 9.0.2", "coverage ~= 7.13.4", "pytest-cov ~= 7.0.0"]
dev = [
    "sphinx ~= 9.1.0",
    "pytest ~= 9.0.2",
    "coverage ~= 7.13.4",
    "pytest-cov ~= 7.0.0",
    "prek ~= 0.3.0",
    "ruff ~= 0.15.1",
    "ty ~= 0.0.17",
]

[project.urls]
Home = "https://github.com/roli2py/message-sender-telegram-bot"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 79
